--- a/in/render.yaml
+++ b/in/render.yaml
@@ -2,7 +2,9 @@ services:
   - type: web
     name: in-spring-app
     env: java
-    buildCommand: chmod +x ./mvnw && ./mvnw clean package -DskipTests
+    buildCommand: |
+      chmod +x ./mvnw
+      JAVA_HOME=/usr/lib/jvm/temurin-21-jdk-amd64 ./mvnw clean package -DskipTests
     startCommand: java -Dserver.port=$PORT -jar target/in-0.0.1-SNAPSHOT.jar
     envVars:
       - key: SPRING_PROFILES_ACTIVE
