--- a/in/render.yaml
+++ b/in/render.yaml
@@ -6,6 +6,7 @@ services:
       chmod +x ./mvnw
       JAVA_HOME=/usr/lib/jvm/temurin-21-jdk-amd64 ./mvnw clean package -DskipTests
     startCommand: java -Dserver.port=$PORT -jar target/in-0.0.1-SNAPSHOT.jar
+    docker: null  # Explicitly disable Docker
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
