--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,8 @@
 services:
   - type: web
     name: in-spring-app
-    env: java
-    buildCommand: |
-      chmod +x ./mvnw
-      JAVA_HOME=/usr/lib/jvm/temurin-21-jdk-amd64 ./mvnw clean package -DskipTests
-    startCommand: java -Dserver.port=$PORT -jar target/in-0.0.1-SNAPSHOT.jar
-    docker: null  # Explicitly disable Docker
+    env: docker
+    dockerfile: ./Dockerfile
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
