--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,12 @@
 services:
   - type: web
     name: in-spring-app
-    env: docker
-    dockerfile: ./Dockerfile
+    env: java
+    rootDir: in
+    buildCommand: |
+      chmod +x ./mvnw
+      ./mvnw clean package -DskipTests
+    startCommand: java -Dserver.port=$PORT -jar target/in-0.0.1-SNAPSHOT.jar
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
