--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,8 @@
 services:
   - type: web
     name: in-spring-app
-    env: java
-    buildCommand: |
-      chmod +x ./mvnw
-      ./mvnw clean package -DskipTests
-    startCommand: java -Dserver.port=$PORT -jar target/in-0.0.1-SNAPSHOT.jar
+    env: docker
+    dockerfile: ./Dockerfile
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
