Set rootDir to current directory in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: in-spring-app
     env: java
+    rootDir: .
     buildCommand: |
       chmod +x mvnw
       ./mvnw clean package -DskipTests
